--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -1,4 +1,14 @@
 <head>
-	<title>{{title}}</title>
-	<link rel="stylesheet" type="text/css" href="/css/fizz.css">
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <title>{{title}}</title>
+    <meta name="description" content=""/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+    <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
+    {{> favicons }}
+
+    <link rel="stylesheet" href="/css/fizz.css"/>
+    <link href="//cloud.typography.com/6664852/692222/css/fonts.css" rel="stylesheet"/>
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
