--- a/src/scss/school/_navigation.scss
+++ b/src/scss/school/_navigation.scss
@@ -4,7 +4,8 @@
   padding: 1em .5em;
   box-shadow: 0 4px 4px 0 rgba(210, 210, 210, 0.8);
   overflow-x: scroll;
-  -webkit-overflow-scrolling: touch; }
+  -webkit-overflow-scrolling: touch; 
+}
 
 .school__navigation__head {
   padding: 0;
