--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -8,7 +8,7 @@ layout:default.hbs
 {{> head }}
 
 <body>
-<a data-scroll href="#bazinga">Anchor Link</a>
+{{!-- <a data-scroll href="#bazinga">Anchor Link</a> --}}
 
 {{> global__header }}
 {{> global__navigation }}
@@ -17,7 +17,7 @@ layout:default.hbs
 
 {{> body }}
 
-<span id="bazinga">Bazinga!</span>
+{{!-- <span id="bazinga">Bazinga!</span> --}}
 
 {{> global__footer }}
 
