--- a/src/templates/partials/global__footer.hbs
+++ b/src/templates/partials/global__footer.hbs
@@ -1,6 +1,6 @@
 <footer class="global__footer">
             <section class="blue">
-                <div class="inner pv2">
+                <div class="inner">
                     <div class="grid">
                         <div class="grid-cell u-medium-1-4">
                             <div class="grid-pad-1x">
@@ -11,9 +11,11 @@
                                         <address>3900 Bethel Drive
                                             <br/>St. Paul, MN 55112</address>
                                         <p>651.638.6400</p>
-                                        <ul class="unstyled">
-                                            <li> <span aria-hidden="true" data-icon=""></span> <a href="https://www.facebook.com/betheluniversity">Facebook</a></li>
-                                            <li><span aria-hidden="true" data-icon=""></span> <a href="https://twitter.com/BethelU">Twitter</a></li>
+                                        <ul class="unstyled  margins-off">
+                                            <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#facebook" xmlns="#"></use></svg><a href="https://www.facebook.com/betheluniversity">Facebook</a></li>
+                                            <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#twitter" xmlns="#"></use></svg><a href="https://twitter.com/BethelU">Twitter</a></li>
+                                            <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#instagram" xmlns="#"></use></svg><a href="https://www.instagram.com/bethelumn">Instagram</a></li>
+                                            <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#googleplus" xmlns="#"></use></svg><a rel="publisher" href="https://plus.google.com/117840979079441135027/">Google+</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -21,19 +23,18 @@
                         </div>
                         <div class="grid-cell u-medium-1-4">
                             <div class="grid-pad-1x">
-                                <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a>
-                                </p>
-                                <ul class="unstyled">
-                                    <li><span aria-hidden="true" data-icon=""></span> <a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></li>
-                                    <li><span aria-hidden="true" data-icon=""></span> <a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
-                                    <li><span aria-hidden="true" data-icon=""></span> <a href="https://www.bethel.edu/about/contact/questions-comments">Questions &amp; Comments</a></li>
+                                <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
+                                <ul class="unstyled  margins-off">
+                                    <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></li>
+                                    <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#user"></use></svg><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
+                                    <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#help"></use></svg><a href="https://www.bethel.edu/about/contact/questions-comments">Questions &amp; Comments</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="grid-cell u-medium-1-4">
                             <div class="grid-pad-1x">
                                 <h2 class="h5">Information For</h2>
-                                <ul class="unstyled">
+                                <ul class="unstyled  margins-off">
                                     <li><a href="http://www.bethel.edu/admissions/">Prospective Students</a></li>
                                     <li><a href="https://blink.bethel.edu/">Current Students</a></li>
                                     <li><a href="http://www.bethel.edu/parents/">Parents &amp; Families</a></li>
@@ -45,7 +46,7 @@
                         <div class="grid-cell u-medium-1-4">
                             <div class="grid-pad-1x">
                                 <h2 class="h5">Resources</h2>
-                                <ul class="unstyled">
+                                <ul class="unstyled  margins-off">
                                     <li><a href="https://blink.bethel.edu/">Blink</a></li>
                                     <li><a href="https://mail.bethel.edu">Email</a></li>
                                     <li><a href="https://moodle.bethel.edu/">Moodle</a></li>
@@ -58,7 +59,7 @@
                 </div>
             </section>
             <section class="dark-blue bottom-nav">
-                <ul class="pull-left">
+                <ul class="pull-left margins-off">
                     <li>
                         <a href="http://www.bethel.edu">
                             <span aria-hidden="true" data-icon=""></span>
