--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -1,14 +1,22 @@
 
 @import 
 
+"variables",
+"mixins",
+
 "base/normalize",
+"base/base",
 "base/fluidity",
 "base/space",
 
 "typography/typography",
 
-"global/navigation",
+"grid/flex-grid",
+"grid/layout",
+
 "global/header",
+"global/toolbox",
+"global/navigation",
 "global/breadcrumb",
 "global/footer",
 
