--- a/src/scss/global/_footer.scss
+++ b/src/scss/global/_footer.scss
@@ -1,15 +1,36 @@
 .global__footer {
-  background: #0069aa; }
-  .global__footer p, .global__footer li {
-    color: #77cbff; }
-  .global__footer a, .global__footer a i {
-    color: #fff; }
-  .global__footer a:hover {
-    color: #fff; }
-  .global__footer h1, .global__footer h2, .global__footer h3, .global__footer h4, .global__footer h5, .global__footer h6 {
-    color: #ffc600;
-    font-size: 100%; }
-  .global__footer address {
-    font-style: normal;
-    margin-bottom: 0;
-    color: #77cbff; }
+    
+    background: #0069aa; 
+
+    p, li {
+        color: #77cbff; 
+    }
+
+    a, a i {
+        color: #fff; 
+    }
+
+    a:hover {
+        color: #fff; 
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        color: #ffc600;
+        font-size: 100%; 
+    }
+
+    address {
+        font-style: normal;
+        margin-bottom: 0;
+        color: #77cbff; 
+    }
+
+    .svg-icon {
+        width: 1em;
+        height: 1em;
+        margin-right: .5em;
+        vertical-align: text-top;
+        fill: white;
+        fill-opacity: .5;
+    }
+}
