--- a/src/scss/typography/_typography.scss
+++ b/src/scss/typography/_typography.scss
@@ -1,9 +1,23 @@
 
+body {
+	line-height: 1.5;
+}
+
 h1 {
 	color: #ffc600;
 	font-size: 6em;
 }
 
 p {
-	font-size: 1.25em;
+}
+
+a {
+	color: $bethel--blue;
+	text-decoration: none;
+}
+
+.unstyled {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
