--- a/src/templates/partials/global__navigation.hbs
+++ b/src/templates/partials/global__navigation.hbs
@@ -1,24 +1,23 @@
-<div class="toolbox" id="toolbox">
-
-<a class="toolbox-close-btn" id="toolbox-close-btn" href="#top">✖ close</a>
-<nav class="global__navigation" role="navigation">
-    <div class="inner">
-        <ul>
-            <li>
-                <a href="http://www.bethel.edu">
-                    <span aria-hidden="true" data-icon=""></span>
-                    <span class="screen-reader-text">Home</span>
-                </a>
-            </li>
-             <li class="active"> <a href="http://www.bethel.edu/about">About</a></li>
-             <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
-             <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
-             <li><a href="http://cas.bethel.edu/student-life/">Student Life</a></li>
-             <li><a href="http://www.bethel.edu/faith/">Faith</a></li>
-             <li><a href="http://athletics.bethel.edu/">Athletics</a></li>
-             <li><a href="http://www.bethel.edu/alumni/">Alumni</a></li>
-             <li><a href="http://www.bethel.edu/giving/">Giving</a></li>
-        </ul>
-    </div>
-</nav>
+<div class="global__toolbox" id="toolbox">
+    <a class="global__toolbox__close-btn" id="global__toolbox__close-btn" href="#top">✖ close</a>
+    
+    <nav class="global__navigation" role="navigation">
+        <div class="inner">
+            <ul>
+                <li><a href="http://www.bethel.edu">
+                        <svg class="svg-icon  home-icon"><use xlink:href="../assets/svg/symbols.svg#home"></use></svg>
+                        <span style="display:none">Home</span>
+                    </a>
+                </li>
+                 <li class="active"> <a href="http://www.bethel.edu/about">About</a></li>
+                 <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
+                 <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
+                 <li><a href="http://cas.bethel.edu/student-life/">Student Life</a></li>
+                 <li><a href="http://www.bethel.edu/faith/">Faith</a></li>
+                 <li><a href="http://athletics.bethel.edu/">Athletics</a></li>
+                 <li><a href="http://www.bethel.edu/alumni/">Alumni</a></li>
+                 <li><a href="http://www.bethel.edu/giving/">Giving</a></li>
+            </ul>
+        </div>
+    </nav>
 </div>
