--- a/src/templates/partials/school__navigation.hbs
+++ b/src/templates/partials/school__navigation.hbs
@@ -1,6 +1,6 @@
 <div class="school__navigation">
     <h1 class="school__navigation__head"><a href="/undergrad/">Undergrad &#9656;</a></h1> 
-    <ul>
+    <ul class="margins-off">
         <li><a href="/undergrad/about/" class="">About</a></li>
         <li><a href="/undergrad/academics/index-new" class="">Academics</a></li>
         <li><a href="/undergrad/admissions/" class="">Admissions</a></li>
