--- a/src/scss/enhance/_buttons.scss
+++ b/src/scss/enhance/_buttons.scss
@@ -45,40 +45,25 @@
  * 9. Don’t allow buttons to have underlines; it kinda ruins the illusion.
  */
 .btn {
-  display: inline-block;
-  /* [1] */
-  vertical-align: middle;
-  /* [2] */
-  white-space: nowrap;
-  /* [3] */
-  font-family: inherit;
-  /* [4] */
-  font-size: 100%;
-  /* [4] */
-  cursor: pointer;
-  /* [5] */
-  border: none;
-  /* [6] */
-  margin: 0;
-  /* [6] */
-  padding-top: 0;
-  /* [6] */
-  padding-bottom: 0;
-  /* [6] */
-  line-height: 3;
-  /* [7] */
-  padding-right: 1em;
-  /* [7] */
-  padding-left: 1em;
-  /* [7] */
-  border-radius: .5em;
-  /* [8] */
+  display: inline-block;/* [1] */
+  vertical-align: middle;/* [2] */
+  white-space: nowrap;/* [3] */
+  font-family: inherit;/* [4] */
+  font-size: 100%;/* [4] */
+  cursor: pointer;/* [5] */
+  border: none;/* [6] */
+  margin: 0;/* [6] */
+  padding-top: 0;/* [6] */
+  padding-bottom: 0;/* [6] */
+  line-height: 3;/* [7] */
+  padding-right: 1em;/* [7] */
+  padding-left: 1em;/* [7] */
+  border-radius: .4em;/* [8] */
   background: #0069aa;
   color: #fff; }
 
 .btn, .btn:hover {
-  text-decoration: none;
-  /* [9] */ }
+  text-decoration: none;/* [9] */ }
 .btn:active, .btn:focus {
   outline: none; }
 
@@ -92,13 +77,15 @@
  * remains uniform.
  */
 .btn-mini {
-  padding-left: .25em;
-  padding-right: .25em;
-  line-height: 1; }
+  padding-left: .5em;
+  padding-right: .5em;
+  line-height: 1.5; 
+  font-size: .9rem;
+}
 
 .btn-small {
-  padding-right: 0.5em;
-  padding-left: 0.5em;
+  padding-right: .85em;
+  padding-left: .85em;
   line-height: 2; }
 
 .btn-large {
@@ -148,6 +135,15 @@
   line-height: inherit;
   padding-right: 0.5em;
   padding-left: 0.5em; }
+
+/*------------------------------------*\
+    $COLORS
+\*------------------------------------*/
+
+.btn-yellow {
+  background: $bethel--yellow;
+  color: $bethel--navy;
+}
 
 /*------------------------------------*\
     $FUNCTIONS
