--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -23,7 +23,10 @@
 "school/navigation",
 
 "site/title",
+"site/navigation",
 
-"enhance/buttons"
+"enhance/buttons",
+"../../../rex/src/scss/enhance/svg-icons",
+"enhance/image-hover" // Symlinked to REX
 
 ;
