--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -5,20 +5,47 @@ layout: default.hbs
 
 <h1>TURTLES are friendly</h1>
 
-<svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#line-briefcase"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#line-chemistry"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#line-globe"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#line-list"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#line-office"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#line-skills"></use></svg>
+{{!-- <svg class="svg-icon  svg-icon--large"><use xlink:href="../assets/icon-sprite/symbols.svg#line-briefcase"></use></svg>
+<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-chemistry"></use></svg>
+<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-globe"></use></svg>
+<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-list"></use></svg>
+<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-office"></use></svg>
+<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-skills"></use></svg> --}}
 
+<div class="grid margins-off">
+	<div class="grid-cell">
+		<a href="//www.bethel.edu/events/arts/index">
+			<figure class=" hover-effect  hover-dim-zoom  margins-off">			
+				<img src="//cdn1.bethel.edu/resize/unsafe/1200x0/smart/http://www.bethel.edu/events/images/events--theatre.jpg" alt="img09">
+				<figcaption>
+					<p>Performing and <span>Visual Arts</span></p>
+					<span class="btn  btn-mini  btn-yellow" href="#turtles">View events</span>
+				</figcaption>		
+			</figure>
+		</a>
+	</div>
+	<div class="grid-cell">
+<figure class=" hover-effect hover-dim-zoom margins-off"> 
+	<img alt="Bethel Athletics" class="overlay--blue" src="//cdn1.bethel.edu/resize/unsafe/1200x0/smart/http://www.bethel.edu/events/images/events--athletics.jpg"/> 
+	<figcaption>
+		<p>Bethel <span>Athletics</span></p>
+		<a class="btn  btn-mini  btn-yellow" href="//athletics.bethel.edu">View Events</a>
+	</figcaption>	
+</figure>
+	</div>
+	<div class="grid-cell">
+		<figure class=" hover-effect  hover-dim-zoom  margins-off">
+			<img class="overlay--blue" src="//cdn1.bethel.edu/resize/unsafe/1200x0/smart/http://www.bethel.edu/events/images/events--calendar.jpg" alt="img09">
+			<figcaption>
+				<p>University <span>Calendar</span></p>
+				<a class="btn  btn-mini  btn-yellow" href="#">View more</a>
+			</figcaption>			
+		</figure>
+	</div>
+</div>
 
 <div class="grid">
-<div class="grid-cell">
-<div style="">
-    <div class="delayed-image-load" data-src="http://placehold.it/{width}" data-alt="alternative text"></div>
-</div>
-</div>
+
 <div class="grid-cell">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non qui itaque hic eveniet eum nulla porro, ipsa, excepturi quo ipsum ratione soluta quisquam est dolorum iure libero voluptatibus. Vitae unde in, cum illum debitis voluptatum officiis eaque laborum facere, aspernatur, a accusantium soluta consequatur voluptas deleniti corporis fugiat delectus at vel accusamus asperiores. Consequuntur totam eaque inventore rerum odit vitae amet corporis, fuga? Distinctio aspernatur, repellendus repudiandae laborum eum, dignissimos sapiente velit error, sequi doloribus saepe! Perferendis nam illum, fugiat repellat modi, voluptatibus quidem similique adipisci tempora dignissimos hic, reiciendis vero ex explicabo. Repellat magnam laudantium, minus eaque nisi recusandae.</p>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis sint laudantium incidunt enim veritatis praesentium molestiae labore, quam. Molestias harum alias numquam sint illo vero deleniti earum autem in veritatis enim, id tempora iste est incidunt asperiores quibusdam! Inventore cumque mollitia necessitatibus reprehenderit assumenda aliquam officia sapiente quidem dolor adipisci vero modi cupiditate rem nobis totam harum voluptatibus fuga obcaecati eius, soluta error laboriosam debitis maxime possimus. Ea similique doloremque adipisci tempora! Iusto sit sed, et architecto eligendi molestiae cupiditate ea laudantium illo ut corporis nemo, ipsum. Quaerat inventore nesciunt numquam harum assumenda placeat, sapiente eum, debitis sunt dolores saepe unde, illum. Minus, voluptatum! Ipsa voluptatum dolore vero vitae quaerat beatae consectetur mollitia odit eos, sequi eum doloremque est, dolorum sit qui exercitationem, dolorem quam fuga! Velit culpa odio a perferendis optio eius quidem earum, obcaecati ipsa, corporis deserunt natus veniam accusamus laborum id ipsam molestias unde quibusdam saepe consequuntur libero quaerat, aspernatur magni. Omnis qui perspiciatis doloremque repellendus quisquam? Fugit maxime alias adipisci mollitia, dolorum quod illo culpa quidem neque aperiam, ad, temporibus numquam sint omnis corporis repellendus repellat ipsum dicta explicabo quisquam sequi minima eaque! Eos pariatur voluptatibus alias sint explicabo quaerat iste perspiciatis atque ipsam aspernatur ad nihil, dolor illum fuga aut hic eius repellendus? Iure cupiditate non, numquam veritatis voluptas! Nemo reiciendis, reprehenderit, iure eaque totam quam nulla tenetur dolores dolorem voluptatem autem! Natus eligendi sequi ratione facere modi incidunt fuga blanditiis quibusdam, aliquid labore voluptate recusandae vel ea, rem qui voluptates nostrum consequatur dignissimos eveniet, repellat laboriosam autem voluptatibus assumenda. Impedit at velit officiis mollitia placeat amet similique aspernatur voluptatum quisquam eum quia excepturi quo maiores, ratione repellendus? Suscipit consectetur eum accusantium eos, obcaecati a dolore ad vitae soluta nisi odit ex ut beatae, numquam itaque neque voluptates, praesentium nostrum nesciunt id sint? Iure aliquam eum, eligendi iste similique perspiciatis, dolores minima. Ipsa, modi, cupiditate. Voluptas quis recusandae maiores asperiores soluta adipisci enim beatae molestias nisi. Labore nesciunt itaque impedit vitae dicta fugit quis asperiores accusamus unde molestias tempora, autem debitis blanditiis. Aliquam molestias iusto, ad? Nesciunt minus, possimus fugit. Eum maxime nisi vitae, tempora officia iure porro, impedit nam ad culpa reprehenderit hic incidunt temporibus nulla sunt, quidem. Aut consequatur, necessitatibus nihil? Nulla nobis nisi quasi placeat ad illum porro recusandae ea accusamus, fuga magni. Deserunt reiciendis labore natus maxime, impedit voluptatibus odit quis porro, eveniet animi aliquam! Officia inventore ipsa, recusandae nobis obcaecati omnis! Necessitatibus repellat vitae eum iusto tempora mollitia fugiat veritatis delectus maiores nemo autem illum ut ipsa porro tenetur accusamus odit laudantium repudiandae, quisquam distinctio. Eum, ad iste temporibus illo voluptatum ipsum eveniet magni, maxime, ipsam in quis aliquam necessitatibus pariatur! Aperiam libero, adipisci amet optio omnis eius perspiciatis architecto assumenda velit asperiores dolorum a quia illo esse nostrum porro fugit quae dolores sint reprehenderit, eligendi vero reiciendis inventore quo. Iure ratione veniam minima magnam neque voluptates, quis quasi obcaecati alias eligendi nostrum aperiam repudiandae recusandae maxime fuga cupiditate, facere eaque porro, sed. Inventore blanditiis quia, facere, facilis quas est, iusto veniam aliquam magni placeat vero dolorum? Sunt saepe voluptate sint blanditiis sapiente nemo, dolor commodi, sed fuga a, ducimus esse nostrum! Quos pariatur magnam praesentium voluptatem, exercitationem at suscipit iusto, nemo temporibus eaque iure illum sint eum libero distinctio voluptates reprehenderit ea aliquid quia quae voluptas! Nisi eos delectus itaque magnam molestiae asperiores, vero provident culpa qui voluptate quo sequi laborum harum earum quaerat commodi, voluptas? Facere neque ullam voluptate quis ipsam nesciunt deleniti assumenda, quisquam tempora. Voluptates omnis accusamus itaque necessita
