--- a/src/templates/partials/global__footer.hbs
+++ b/src/templates/partials/global__footer.hbs
@@ -12,10 +12,10 @@
                                             <br/>St. Paul, MN 55112</address>
                                         <p>651.638.6400</p>
                                         <ul class="unstyled  margins-off">
-                                            <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#facebook" xmlns="#"></use></svg><a href="https://www.facebook.com/betheluniversity">Facebook</a></li>
-                                            <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#twitter" xmlns="#"></use></svg><a href="https://twitter.com/BethelU">Twitter</a></li>
-                                            <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#instagram" xmlns="#"></use></svg><a href="https://www.instagram.com/bethelumn">Instagram</a></li>
-                                            <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#googleplus" xmlns="#"></use></svg><a rel="publisher" href="https://plus.google.com/117840979079441135027/">Google+</a></li>
+                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#facebook" xmlns="#"></use></svg><a href="https://www.facebook.com/betheluniversity">Facebook</a></li>
+                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#twitter" xmlns="#"></use></svg><a href="https://twitter.com/BethelU">Twitter</a></li>
+                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#instagram" xmlns="#"></use></svg><a href="https://www.instagram.com/bethelumn">Instagram</a></li>
+                                            <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#googleplus" xmlns="#"></use></svg><a rel="publisher" href="https://plus.google.com/117840979079441135027/">Google+</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -25,9 +25,9 @@
                             <div class="grid-pad-1x">
                                 <p><a class="btn btn-blue-dark" href="http://www.bethel.edu/giving/">Support Bethel</a></p>
                                 <ul class="unstyled  margins-off">
-                                    <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></li>
-                                    <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#user"></use></svg><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
-                                    <li><svg class="svg-icon"><use xlink:href="../assets/svg/symbols.svg#help"></use></svg><a href="https://www.bethel.edu/about/contact/questions-comments">Questions &amp; Comments</a></li>
+                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#location"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Maps &amp; Directions</a></li>
+                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#user"></use></svg><a href="http://www.bethel.edu/about/employment">Jobs at Bethel</a></li>
+                                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#help"></use></svg><a href="https://www.bethel.edu/about/contact/questions-comments">Questions &amp; Comments</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -60,11 +60,7 @@
             </section>
             <section class="dark-blue bottom-nav">
                 <ul class="pull-left margins-off">
-                    <li>
-                        <a href="http://www.bethel.edu">
-                            <span aria-hidden="true" data-icon=""></span>
-                            <span class="screen-reader-text">Home</span>
-                        </a></li>
+                    <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Home</a></li>
                     <li><a href="http://www.bethel.edu/about/">About</a></li>
                     <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
                     <li><a href="http://www.bethel.edu/admissions/">Admissions</a></li>
