--- a/src/templates/partials/global__navigation.hbs
+++ b/src/templates/partials/global__navigation.hbs
@@ -5,7 +5,7 @@
         <div class="inner">
             <ul>
                 <li><a href="http://www.bethel.edu">
-                        <svg class="svg-icon  home-icon"><use xlink:href="../assets/svg/symbols.svg#home"></use></svg>
+                        <svg class="svg-icon  home-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home"></use></svg>
                         <span style="display:none">Home</span>
                     </a>
                 </li>
