--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -10,5 +10,5 @@
 
     <link rel="stylesheet" href="/css/fizz.css"/>
     <link href="//cloud.typography.com/6664852/692222/css/fonts.css" rel="stylesheet"/>
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    {{!-- // <script src="js/vendor/modernizr-2.8.3.min.js"></script> --}}
 </head>
