--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -27,6 +27,7 @@
 
 "enhance/buttons",
 "../../../rex/src/scss/enhance/svg-icons",
-"enhance/image-hover" // Symlinked to REX
+"../../../rex/src/scss/responsive/feature"
+// "enhance/image-hover" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_image-hover.scss
 
 ;
