--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -3,46 +3,10 @@ title: HOME
 layout: default.hbs
 ---
 
+{{> carousel }}
+
 <h1>TURTLES are friendly</h1>
 
-{{!-- <svg class="svg-icon  svg-icon--large"><use xlink:href="../assets/icon-sprite/symbols.svg#line-briefcase"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-chemistry"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-globe"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-list"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-office"></use></svg>
-<svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#line-skills"></use></svg> --}}
-
-<div class="grid margins-off">
-	<div class="grid-cell">
-		<a href="//www.bethel.edu/events/arts/index">
-			<figure class=" hover-effect  hover-dim-zoom  margins-off">			
-				<img src="//cdn1.bethel.edu/resize/unsafe/1200x0/smart/http://www.bethel.edu/events/images/events--theatre.jpg" alt="img09">
-				<figcaption>
-					<p>Performing and <span>Visual Arts</span></p>
-					<span class="btn  btn-mini  btn-yellow" href="#turtles">View events</span>
-				</figcaption>		
-			</figure>
-		</a>
-	</div>
-	<div class="grid-cell">
-<figure class=" hover-effect hover-dim-zoom margins-off"> 
-	<img alt="Bethel Athletics" class="overlay--blue" src="//cdn1.bethel.edu/resize/unsafe/1200x0/smart/http://www.bethel.edu/events/images/events--athletics.jpg"/> 
-	<figcaption>
-		<p>Bethel <span>Athletics</span></p>
-		<a class="btn  btn-mini  btn-yellow" href="//athletics.bethel.edu">View Events</a>
-	</figcaption>	
-</figure>
-	</div>
-	<div class="grid-cell">
-		<figure class=" hover-effect  hover-dim-zoom  margins-off">
-			<img class="overlay--blue" src="//cdn1.bethel.edu/resize/unsafe/1200x0/smart/http://www.bethel.edu/events/images/events--calendar.jpg" alt="img09">
-			<figcaption>
-				<p>University <span>Calendar</span></p>
-				<a class="btn  btn-mini  btn-yellow" href="#">View more</a>
-			</figcaption>			
-		</figure>
-	</div>
-</div>
 
 <div class="grid">
 
