--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -20,6 +20,17 @@ layout:default.hbs
 
 {{> global__footer }}
 
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.14/slick.min.js"></script>
 <script src="/js/bundle.js"></script>
+
+<script>
+$(document).ready(function(){
+	$('.slick-carousel').slick({
+	  lazyLoad: 'ondemand',
+	});
+});
+</script>
 </body>
 </html>
