--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -10,5 +10,6 @@
 
     <link rel="stylesheet" href="/css/fizz.css"/>
     <link href="//cloud.typography.com/6664852/692222/css/fonts.css" rel="stylesheet"/>
-    {{!-- // <script src="js/vendor/modernizr-2.8.3.min.js"></script> --}}
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.3.14/slick.css"/>
+    <script src="//ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.7.2.js"></script>
 </head>
