--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -27,7 +27,8 @@
 
 "enhance/buttons",
 "../../../rex/src/scss/enhance/svg-icons",
-"../../../rex/src/scss/responsive/feature"
+"../../../rex/src/scss/responsive/feature",
 // "enhance/image-hover" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_image-hover.scss
+"enhance/collapsible-block" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_collapsible-block.scss
 
 ;
